// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBarIcon should default topOffset to 0 when not specified 1`] = `
<View
  style={
    Array [
      Object {
        "height": 30,
        "marginTop": 5,
      },
      Object {
        "top": 0,
      },
    ]
  }
>
  <Icon
    color="#ffffff"
    name="md-list"
    size={22}
  />
</View>
`;

exports[`TabBarIcon should render with full props 1`] = `
<View
  style={
    Array [
      Object {
        "height": 30,
        "marginTop": 5,
      },
      Object {
        "top": 4,
      },
    ]
  }
>
  <Icon
    color="#ffffff"
    name="md-list"
    size={22}
  />
</View>
`;
